<resources>
    <string name="app_name">Dojo2019</string>
    <string name="profile">プロフィール入力画面</string>
    <string name="profile_name">" Name"</string>
    <string name="profile_git">GIthub account</string>
    <string name="profile_twitter">Twitter account</string>
    <string name="profile_button">save</string>
    <string name="profile_name_input">Nakamura Shogo</string>
    <string name="profile_git_input">ShogoNakamura21</string>
    <string name="profile_twitter_input">dmx42ranz</string>
    <string name="profile_button_left">プロフィール登録</string>
    <string name="profile_button_centor">create QR</string>
    <string name="profile_button_right">プロフィール一覧</string>
    <string name="QrRead">QRコード読み取り</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_Qr">Create QR</string>
</resources>
