<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TextView
            android:text="@string/profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/editTextName" android:layout_marginStart="8dp"
            android:id="@+id/textView2" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="336dp"
            android:layout_marginTop="127dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="585dp" app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
            android:text="@string/profile_git"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" app:layout_constraintStart_toStartOf="@+id/editTextGit"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="267dp" android:layout_marginTop="95dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" android:layout_marginBottom="73dp"
            app:layout_constraintBottom_toTopOf="@+id/textView4"/>
    <TextView
            android:text="@string/profile_twitter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="267dp"
            app:layout_constraintStart_toStartOf="@+id/editTextTwi" android:layout_marginStart="8dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editTextTwi"
            app:layout_constraintStart_toStartOf="@+id/editTextGit"
            android:text="@string/profile_twitter_input"
            android:layout_marginTop="21dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4" app:layout_constraintEnd_toEndOf="@+id/editTextGit"/>
    <Button
            android:text="@string/profile_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_save"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout3" app:layout_constraintStart_toStartOf="parent"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editTextName"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="166dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:text="@string/profile_name_input" android:layout_marginBottom="61dp"
            app:layout_constraintBottom_toTopOf="@+id/textView3"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/profile_git_input"
            android:ems="10"
            android:id="@+id/editTextGit"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            android:layout_marginBottom="39dp"
            app:layout_constraintBottom_toTopOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="@+id/editTextName"
            app:layout_constraintEnd_toEndOf="@+id/editTextName"/>
    <Button
            android:text="@string/profile_button_centor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button_qr" android:layout_weight="1"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout3" app:layout_constraintEnd_toEndOf="parent"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/linearLayout3">
        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="55dp" app:srcCompat="@android:drawable/ic_menu_add"
                android:id="@+id/button_regist" android:background="#333333"
                android:backgroundTint="#333333" android:layout_weight="1" tools:layout_editor_absoluteY="468dp"
                tools:layout_editor_absoluteX="7dp"/>
        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="55dp" app:srcCompat="@android:drawable/ic_menu_camera"
                android:id="@+id/qr_camera" android:layout_weight="1" android:visibility="visible"
                android:background="#333333"/>
        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="55dp" app:srcCompat="@android:drawable/ic_menu_sort_by_size"
                android:id="@+id/button_profile" android:layout_weight="1" android:background="#333333"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>