<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".QRcodeActivity">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@mipmap/ic_launcher"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/imageView2"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="436dp"
            android:layout_height="57dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp" android:layout_marginTop="264dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2">
        <Button
                android:text="@string/profile_button_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/button4" android:layout_weight="1"/>
        <Button
                android:text="@string/profile_button_centor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/button3" android:layout_weight="1"/>
        <Button
                android:text="@string/profile_button_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/button5" android:layout_weight="1"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>